使用禁止ポケモン送信APIを作成
