# docs/openapi.yml
@@ -61,6 +61,41 @@ paths:
           description: Unauthorized
         "422":
           description: Unprocessable Entity
+  /match/banned:
+    post:
+      summary: 使用禁止ポケモン送信API
+      tags:
+        - 結果送信
+      security:
+        - ApiKeyAuth: []
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                match_id:
+                  type: string
+                  description: 試合ID
+                datetime:
+                  type: string
+                  format: date-time
+                  example: "2023-09-01T12:10:00+09:00"
+                  description: 対戦日時 (UTCフォーマット)
+                pokemon:
+                  $ref: "#/components/schemas/PokemonEnum"
+              required:
+                - match_id
+                - datetime
+                - pokemon
+      responses:
+        "201":
+          description: Success
+        "401":
+          description: Unauthorized
+        "422":
+          description: Unprocessable Entity
 
 components:
   securitySchemes:
